# gtxt

./: .gitmodules  Android.mk  CMakeLists.txt  README.md  gtxt.h  gtxt_adapter.c  gtxt_adapter.h  gtxt_ejoy2d.h  gtxt_freetype.c  gtxt_freetype.h  gtxt_glyph.c  gtxt_glyph.h  gtxt_label.c  gtxt_label.h  gtxt_layout.c  gtxt_layout.h  gtxt_render.c  gtxt_render.h  gtxt_richtext.c  gtxt_richtext.h  gtxt_typedef.h  gtxt_user_font.c  gtxt_user_font.h  gtxt_util.c  gtxt_util.h  lua_wrap_gtxt.c
